tests/cases/semantics/directives/dump_ir.stderr
error: the `dump_ir` directive expects a declaration as an argument
 --> $DIR/dump_ir.hash:6:17
5 |   // FAIL: `#dump_ir` only accepts declarations as an argument.
6 |   mux := #dump_ir 2
  |                   ^ a literal cannot be given to the `dump_ir` directive
7 |   

error: the `dump_ir` directive is must be within a constant block
  --> $DIR/dump_ir.hash:14:14
13 |   
14 |       #dump_ir m := 2
   |                ^ `dump_ir` cannot be used within body block
15 |   }
